# repindex

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
repindex/: __init__.py  repindex.py
tests/: test_repindex.py
