[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repindex"
version = "0.3.0"
description = "A tool to index a repository and generate structured outputs for visualization and documentation."
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT License"}
authors = [
  {name = "Your Name", email = "you@example.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
keywords = ["repository", "index", "documentation", "dependency graph", "context"]

[project.scripts]
repindex = "repindex.repindex:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/repindex"