[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repindex"
version = "0.3.2"
description = "A tool to index a repository and generate structured outputs for visualization and documentation."
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
authors = [
  {name = "Simon Yang", email = "simon@example.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
keywords = ["repository", "index", "documentation", "dependency graph", "context", "llm"]
dependencies = [
  "setuptools>=61.0",
]

[project.optional-dependencies]
clipboard = ["pyperclip>=1.8.0"]
dev = ["flake8>=5.0.0", "pytest>=7.0.0"]

[project.scripts]
repindex = "repindex.repindex:main"

[project.urls]
"Homepage" = "https://github.com/yangsi7/repindex"
"Bug Tracker" = "https://github.com/yangsi7/repindex/issues"
